# ohmframe-copilot

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: assembly_parser.rs  interface_detection.rs  main.rs  tolerance_calc.rs
src/components/: CostEstimation.tsx  DfmResults.tsx  ManufacturingInfo.tsx  ToleranceStackup.tsx
src/components/AssemblyExplorer/: AssemblyExplorer.tsx  index.ts
src/components/ChainBuilder/: ChainBuilder.tsx  index.ts
src/components/ModelViewer/: ModelViewer.tsx
src/components/ToleranceResults/: ToleranceResults.tsx  index.ts
src/components/ToleranceStackupMode/: ToleranceStackupMode.tsx  index.ts
src/lib/: stepLoader.ts
src/lib/assembly/: graphBuilder.ts  interfaceDetector.ts  types.ts
src/lib/cost/: types.ts
src/lib/dfm/: glossary.ts  index.ts  parser.ts  rules.ts  types.ts
src/lib/mesh/: types.ts
src/lib/tolerance/: calculator.ts  types.ts
src/types/: global.d.ts  occt-import-js.d.ts
