[package]
name = "ohmframe-copilot"
version = "1.0.8"
description = "AI-powered engineering co-pilot for CAD software"
authors = ["Ohmframe"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
screenshots = "0.7"
base64 = "0.22"
image = "0.24"

# STEP file processing
truck-stepio = "0.3"
truck-topology = "0.3"
truck-polymesh = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
